--- a/100daySite/styles/shared.css
+++ b/100daySite/styles/shared.css
@@ -2,15 +2,16 @@ body {
     text-align: center;
     background-color: rgb(233, 215, 207);
     margin: 50px;
+    color: rgb(83, 75, 75);
 }
 
 h1 {
     font-family: 'Oswald', sans-serif;
-    color: rgb(83, 55, 75)
 }
 
 p {
     font-family: 'Fira Sans', sans-serif;
+    font-size: 24px;
     /* color: #534b4b; */
 }
 
