--- a/main/travel_page/styles.css
+++ b/main/travel_page/styles.css
@@ -50,6 +50,8 @@
 
 #highlights {
     padding: 24px;
+    /* degree / color /  */
+    background: linear-gradient(45deg, rgb(227, 255, 231), rgb(202, 243, 240)); 
 }
 
 #highlights h2 {
