--- a/main/web_food/common.css
+++ b/main/web_food/common.css
@@ -2,6 +2,10 @@ body {
     background-color: rgb(59, 58, 68);
 }
 
+ul {
+    list-style: none;
+}
+
 header {
     display: flex;
     justify-content: space-between;
@@ -30,6 +34,6 @@ header nav a:hover {
     color: rgb(200, 130, 100);
 }
 
-ul {
-    list-style: none;
+main img {
+    width: 400px;
 }
