[22Days] em & rem

--- a/main/web_food/common.css
+++ b/main/web_food/common.css
@@ -85,6 +85,13 @@ main h1 {
     text-align: center;
 }
 
+h2 {
+    /* font-size: 100%;  */
+    /* size of parent */
+    /* browser default font size */
+    font-size: 2rem;
+}
+
 .btn {
     background-color: rgb(228, 157, 44);
     color: white;
