[22Days] em & rem 적용

--- a/main/web_food/common.css
+++ b/main/web_food/common.css
@@ -13,7 +13,8 @@ a {
 } */
 
 #main-header {
-    height: 80px;
+    /* height: 80px; */
+    height: 5rem;
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -30,12 +31,12 @@ a {
 }
 
 #main-header li {
-    margin: 0 16px;
+    margin: 0 1rem;
 }
 
 #main-header nav a {
     color: rgb(185, 131, 131);
-    font-size: 20px ;
+    font-size: 1.25rem;
 }
 
 #main-header nav a:hover {
@@ -44,7 +45,7 @@ a {
 }
 
 #logo {
-    font-size: 24px;
+    font-size: 1.5rem;
     font-weight: bold;
     color: rgb(238, 164, 80);
 }
@@ -52,20 +53,21 @@ a {
 main h1 {
     text-align: center;
     color: rgb(234, 164, 80);
-    font-size: 38px;
+    font-size: 1rem;
 }
 
 #latest-products {
     width: 80%;
-    margin: 50px auto;
+    margin: 2rem auto;
 }
 
 #latest-products ul {
     display: grid;
     grid-template-columns: 1fr 1fr;
-    gap: 16px;
+    gap: 1rem;
     margin: 0;
     padding: 0;
+    list-style: none;
 }
 
 .food-items {
@@ -75,13 +77,17 @@ main h1 {
 }
 
 .food-items img {
-    height: 240px;
+    height: 15rem;
     width: 100%;
     object-fit: cover;
 }
 
 .food-item-content {
-    padding: 16px;
+    /* padding: 16px; */
+    /* from width of parent element */
+    /* padding: 10%; */ 
+    /* from font size property of parent element */
+    padding: 1em;
     text-align: center;
 }
 
@@ -96,7 +102,7 @@ h2 {
     background-color: rgb(228, 157, 44);
     color: white;
     border-radius: 4px;
-    padding: 8px 24px;
+    padding: 0.5rem 1.5rem;
 }
 
 .btn:hover {
