--- a/main/web_food/common.css
+++ b/main/web_food/common.css
@@ -108,3 +108,13 @@ h2 {
 .btn:hover {
     background-color: rgb(221, 134, 34);
 }
+
+@media (max-width: 768px) {
+    #latest-products ul {
+        grid-template-columns: 100%;
+        /* gap: 1rem;
+        margin: 0;
+        padding: 0;
+        list-style: none; */
+    }
+}
