--- a/main/web_food/common.css
+++ b/main/web_food/common.css
@@ -50,6 +50,20 @@ a {
     color: rgb(238, 164, 80);
 }
 
+.menu-btn {
+    width: 3rem;
+    height: 3rem;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+}
+
+.menu-btn span {
+    width: 100%;
+    height: 3px;
+    background-color: white;
+}
+
 main h1 {
     text-align: center;
     color: rgb(234, 164, 80);
@@ -109,7 +123,15 @@ h2 {
     background-color: rgb(221, 134, 34);
 }
 
-@media (max-width: 768px) {
+@media (max-width: 29rem) {
+    main h1 {
+        font-size: 1.5rem;
+    }
+
+    #main-header nav a {
+        display: none;
+    }
+
     #latest-products ul {
         grid-template-columns: 100%;
         /* gap: 1rem;
