--- a/main/web_food/common.css
+++ b/main/web_food/common.css
@@ -26,8 +26,6 @@ a {
     display: flex;
     justify-content: space-between;
     list-style: none;
-    margin: 0;
-    padding: 0;
 }
 
 #main-header li {
@@ -42,6 +40,33 @@ a {
 #main-header nav a:hover {
     background-color: rgb(200, 130, 100);
     color: rgb(200, 130, 100);
+}
+
+#side-drawer {
+    width: 100%;
+    height: 100%;
+    background-color: rgb(29, 26, 27);
+    position: fixed;
+    top: 0;
+    left: 0;
+}
+
+#side-drawer ul {
+    list-style: none;
+    margin: 0;
+    padding: 4rem 1rem;
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+}
+
+#side-drawer a {
+    color: rgb(253, 239, 213);
+    font-size: 2rem;
+}
+
+#side-drawer li {
+    margin: 1rem 0;
 }
 
 #logo {
