--- a/main/eat_well/views/restaurants.html
+++ b/main/eat_well/views/restaurants.html
@@ -7,19 +7,51 @@
     <title>Eat Well</title>
 </head>
 <body>
-    <header>
-        <div>
-            <a href="index.html">Eat Well</a>
-        </div>
+    <header id="main-header">
+        <div id="logo"><a href="/">Eatwell</a></div>
         <nav>
-            <ul>
-                <li><a href="restaurants.html">Browse Restaurents</a></li>
-            </ul>
+          <ul>
+            <li class="nav-item"><a href="/restaurants">Browse Restaurants</a></li>
+            <li class="nav-item"><a href="/recommend">Share a Restaurant</a></li>
+            <li class="nav-item"><a href="/about">About Eatwell</a></li>
+          </ul>
         </nav>
-    </header>
-    <aside></aside>
-    <main>
-        <h1>Recommended Restaurents</h1>
-    </main>
+        <button id="drawer-btn">
+          <span></span>
+          <span></span>
+          <span></span>
+        </button>
+      </header>
+      <aside id="mobile-drawer">
+        <nav>
+          <ul>
+            <li class="nav-item"><a href="/restaurants">Browse Restaurants</a></li>
+            <li class="nav-item"><a href="/recommend">Share a Restaurant</a></li>
+            <li class="nav-item"><a href="/about">About Eatwell</a></li>
+          </ul>
+        </nav>
+      </aside>
+      <main>
+        <h1>Recommended restaurants</h1>
+        <p>Find your next favorite restaurants with help of our other users!</p>
+        <ul id="restaurants-list">
+          <li class="restaurant-item">
+            <article>
+              <h2>Restaurant Title</h2>
+              <div class="restaurant-meta">
+                <p>Mexican</p>
+                <p>Address of the restaurant, including city</p>
+              </div>
+              <p>
+                A short description, explaining why this restaurant is awesome!
+              </p>
+              <div class="restaurant-actions">
+                <a href="">View Website</a>
+              </div>
+            </article>
+          </li>
+    
+        </ul>
+      </main>
 </body>
 </html>
